画像枚数、容量表示対応
